# PROP

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml
.github/workflows/: lix-external-clock.yml
db/migrations/: 001_lix_core.sql  002_lix_v2_asian_sweep.sql
docs/: free_render_ops.md  migration_report.md  render_deploy.md  runtime_env.md
src/lix/: __init__.py  config.py  main.py
src/lix/analysis/: indicators.py
src/lix/api/: __init__.py  admin.py
src/lix/backtesting/: __init__.py  engine.py
src/lix/db/: repository.py  runtime_state.py
src/lix/domain/: models.py
src/lix/intelligence/: confidence.py  engine.py  pair_ranking.py  performance_memory.py  regime.py
src/lix/jobs/: scheduler.py
src/lix/monitoring/: __init__.py  loss_review.py
src/lix/providers/: alpha_vantage.py  fallback_market_data.py  fmp_market_data.py  market_data_provider.py  news_provider.py  twelve_data_market_data.py
src/lix/risk/: manager.py
src/lix/services/: market_scanner.py  pair_ranking_service.py  reporting.py  trade_monitor.py
src/lix/strategies/: asian_liquidity_sweep.py  base.py  key_level_rejection.py  liquidity_grab.py  london_expansion.py  monday_gap.py  news_continuation.py  volatility_expansion.py
src/lix/system/: health.py
tests/: test_admin_api.py  test_backtesting.py  test_config.py  test_fmp_market_data.py  test_intelligence_engine.py  test_loss_review.py  test_market_scanner.py  test_news_provider.py  test_strategies.py  test_telegram_client.py  test_trade_monitor.py  test_twelve_data_market_data.py
(+1 files in other folders)
